app/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend-service
spec:
  ports:
  - name: 80-8002
    port: 8010
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
  type: LoadBalancer
status:
  loadBalancer: {}
